# fun--with--sdl-1-3

./: CMakeLists.txt  main.cpp
fraktaleGebirge/: Drawable.cpp  Drawable.h  Fractal.cpp  Fractal.h  OpenGL.cpp  OpenGL.h  Point.cpp  Point.h  RotTrans.cpp  RotTrans.h  Triangle.cpp  Triangle.h  main.cpp
fraktaleGebirge/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
fraktaleGebirge/nbproject/private/: private.xml
goasm/: GOASM.MAP  comp.bat  d.bat  goasm.asm  link.bat
part_1/: CMakeLists.txt  main.cpp  main.h
part_2/: CMakeLists.txt  cDebugConsole.cpp  cDebugConsole.h  cDot.cpp  cDot.h  cEvent.cpp  cEvent.h  cPlayer.h  cVariable.cpp  cVariable.h  cWindow.cpp  cWindow.h  main.cpp
sgf-parser/: .cproject  .project  FileReadMachine.h  Heightmap.cpp  Heightmap.h  Makefile  SGFLoadSave.cpp  SGFLoadSave.h  StateMachine.h  States.h  f.sgf  gvim  main2.cpp  main3.cpp  sgf-parser  sgf-parser.kdev4  sgf-tree.h
sgf-parser/.kdev4/: sgf-parser.kdev4
sgf-parser/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
sgf-parser/nbproject/private/: configurations.xml
